fdo#61201: Don't forget to calculate row offset for external single ref.

Change-Id: Ie3dbf2eeba98a60aa2426b1db35ac885102d3821